# scout-ai

./: .gitignore  .vimproject  README.md  README.rdoc  Rakefile  scout-ai.gemspec
doc/: Agent.md  Chat.md  LLM.md  Model.md  PythonAgentTasks.md  RAG.md  USER_GUIDE.md
lib/: scout-ai.rb
lib/scout/ai/: openai.rb
lib/scout/llm/: agent.rb  ask.rb  chat.rb  embed.rb  image.rb  mcp.rb  ollama.rb  openai.rb  parse.rb  rag.rb  tools.rb  utils.rb
lib/scout/llm/agent/: chat.rb  delegate.rb  iterate.rb  workflow.rb
lib/scout/llm/backends/: anthropic.rb  bedrock.rb  (+8 more)
lib/scout/model/: base.rb
lib/scout/network/: entity.rb  knowledge_base.rb  paths.rb
python/: README.md  pyproject.toml
python/scout_ai/: __init__.py  agent.py  chat.py  data.py  huggingface.py  message.py  runner.py
python/scout_ai/huggingface/: data.py  eval.py  model.py  rlhf.py  train.py
python/scout_ai/huggingface/train/: __init__.py  next_token.py
python/tests/: test_chat_agent.py  test_huggingface_eval.py  test_runner.py
questions/: coach
scout_commands/: documenter
scout_commands/agent/: ask  find  kb
scout_commands/llm/: ask  info  json  md  process  process_queries  prov  server  template  word
scout_commands/workflow/: mcp
share/server/: chat.html  chat.js
share/word/: reference.docx
test/: test_helper.rb
test/scout/llm/: test_agent.rb  test_ask.rb  test_chat.rb  test_mcp.rb  test_ollama.rb  test_openai.rb  test_parse.rb  test_rag.rb  test_tools.rb  test_utils.rb
test/scout/model/: test_base.rb
test/scout/network/: test_entity.rb  test_knowledge_base.rb  test_paths.rb
(+48 files in other folders)
